@@ -999,6 +999,16 @@ public class Standard extends Item
 	}/**
 
 	 **
+	 * Returns a Locator the content of {@link #anyMedia} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	public final com.exedio.cope.pattern.MediaPath.Locator getAnyMediaLocator()
+	{
+		return Standard.anyMedia.getLocator(this);
+	}/**
+
+	 **
 	 * Returns the content type of the media {@link #anyMedia}.
 	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
 	 *       It can be customized with the tag <tt>@cope.getContentType public|package|protected|private|none|non-final</tt> in the comment of the field.
@@ -1133,6 +1143,16 @@ public class Standard extends Item
 	final java.lang.String getMajorMediaURL()
 	{
 		return Standard.majorMedia.getURL(this);
+	}/**
+
+	 **
+	 * Returns a Locator the content of {@link #majorMedia} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final com.exedio.cope.pattern.MediaPath.Locator getMajorMediaLocator()
+	{
+		return Standard.majorMedia.getLocator(this);
 	}/**
 
 	 **
@@ -1273,6 +1293,16 @@ public class Standard extends Item
 	}/**
 
 	 **
+	 * Returns a Locator the content of {@link #minorMedia} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	protected final com.exedio.cope.pattern.MediaPath.Locator getMinorMediaLocator()
+	{
+		return Standard.minorMedia.getLocator(this);
+	}/**
+
+	 **
 	 * Returns whether media {@link #minorMedia} is null.
 	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
 	 *       It can be customized with the tag <tt>@cope.isNull public|package|protected|private|none|non-final</tt> in the comment of the field.
@@ -1400,6 +1430,16 @@ public class Standard extends Item
 	}/**
 
 	 **
+	 * Returns a Locator the content of {@link #noSetterMedia} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	public final com.exedio.cope.pattern.MediaPath.Locator getNoSetterMediaLocator()
+	{
+		return Standard.noSetterMedia.getLocator(this);
+	}/**
+
+	 **
 	 * Returns the content type of the media {@link #noSetterMedia}.
 	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
 	 *       It can be customized with the tag <tt>@cope.getContentType public|package|protected|private|none|non-final</tt> in the comment of the field.
@@ -1485,6 +1525,16 @@ public class Standard extends Item
 	public final java.lang.String getPrivateSetterMediaURL()
 	{
 		return Standard.privateSetterMedia.getURL(this);
+	}/**
+
+	 **
+	 * Returns a Locator the content of {@link #privateSetterMedia} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	public final com.exedio.cope.pattern.MediaPath.Locator getPrivateSetterMediaLocator()
+	{
+		return Standard.privateSetterMedia.getLocator(this);
 	}/**
 
 	 **
