@@ -122,6 +122,16 @@ final class MediaServletItem extends Item
 	}/**
 
 	 **
+	 * Returns a Locator the content of {@link #content} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final com.exedio.cope.pattern.MediaPath.Locator getContentLocator()
+	{
+		return MediaServletItem.content.getLocator(this);
+	}/**
+
+	 **
 	 * Returns the content type of the media {@link #content}.
 	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
 	 *       It can be customized with the tag <tt>@cope.getContentType public|package|protected|private|none|non-final</tt> in the comment of the field.
@@ -259,6 +269,16 @@ final class MediaServletItem extends Item
 	}/**
 
 	 **
+	 * Returns a Locator the content of {@link #redirect} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final com.exedio.cope.pattern.MediaPath.Locator getRedirectLocator()
+	{
+		return MediaServletItem.redirect.getLocator(this);
+	}/**
+
+	 **
 	 * Returns the content type of the media {@link #redirect}.
 	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
 	 *       It can be customized with the tag <tt>@cope.getContentType public|package|protected|private|none|non-final</tt> in the comment of the field.
@@ -276,6 +296,16 @@ final class MediaServletItem extends Item
 	final java.lang.String getThumbnailURL()
 	{
 		return MediaServletItem.thumbnail.getURL(this);
+	}/**
+
+	 **
+	 * Returns a Locator the content of {@link #thumbnail} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final com.exedio.cope.pattern.MediaPath.Locator getThumbnailLocator()
+	{
+		return MediaServletItem.thumbnail.getLocator(this);
 	}/**
 
 	 **
@@ -309,6 +339,16 @@ final class MediaServletItem extends Item
 	}/**
 
 	 **
+	 * Returns a Locator the content of {@link #thumbnailRedirect} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final com.exedio.cope.pattern.MediaPath.Locator getThumbnailRedirectLocator()
+	{
+		return MediaServletItem.thumbnailRedirect.getLocator(this);
+	}/**
+
+	 **
 	 * Returns the content type of the media {@link #thumbnailRedirect}.
 	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
 	 *       It can be customized with the tag <tt>@cope.getContentType public|package|protected|private|none|non-final</tt> in the comment of the field.
@@ -326,6 +366,16 @@ final class MediaServletItem extends Item
 	final java.lang.String getThumbnailMagickURL()
 	{
 		return MediaServletItem.thumbnailMagick.getURL(this);
+	}/**
+
+	 **
+	 * Returns a Locator the content of {@link #thumbnailMagick} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final com.exedio.cope.pattern.MediaPath.Locator getThumbnailMagickLocator()
+	{
+		return MediaServletItem.thumbnailMagick.getLocator(this);
 	}/**
 
 	 **
@@ -359,6 +409,16 @@ final class MediaServletItem extends Item
 	}/**
 
 	 **
+	 * Returns a Locator the content of {@link #thumbnailMagickPng} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final com.exedio.cope.pattern.MediaPath.Locator getThumbnailMagickPngLocator()
+	{
+		return MediaServletItem.thumbnailMagickPng.getLocator(this);
+	}/**
+
+	 **
 	 * Returns the content type of the media {@link #thumbnailMagickPng}.
 	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
 	 *       It can be customized with the tag <tt>@cope.getContentType public|package|protected|private|none|non-final</tt> in the comment of the field.
@@ -386,6 +446,16 @@ final class MediaServletItem extends Item
 	final java.lang.String getThumbnailMagickPngBlueURL()
 	{
 		return MediaServletItem.thumbnailMagickPngBlue.getURL(this);
+	}/**
+
+	 **
+	 * Returns a Locator the content of {@link #thumbnailMagickPngBlue} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final com.exedio.cope.pattern.MediaPath.Locator getThumbnailMagickPngBlueLocator()
+	{
+		return MediaServletItem.thumbnailMagickPngBlue.getLocator(this);
 	}/**
 
 	 **
