@@ -142,6 +142,16 @@ public class MediaItem extends Item
 	}/**
 
 	 **
+	 * Returns a Locator the content of {@link #file} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final com.exedio.cope.pattern.MediaPath.Locator getFileLocator()
+	{
+		return MediaItem.file.getLocator(this);
+	}/**
+
+	 **
 	 * Returns the content type of the media {@link #file}.
 	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
 	 *       It can be customized with the tag <tt>@cope.getContentType public|package|protected|private|none|non-final</tt> in the comment of the field.
@@ -276,6 +286,16 @@ public class MediaItem extends Item
 	final java.lang.String getImageURL()
 	{
 		return MediaItem.image.getURL(this);
+	}/**
+
+	 **
+	 * Returns a Locator the content of {@link #image} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final com.exedio.cope.pattern.MediaPath.Locator getImageLocator()
+	{
+		return MediaItem.image.getLocator(this);
 	}/**
 
 	 **
@@ -416,6 +436,16 @@ public class MediaItem extends Item
 	}/**
 
 	 **
+	 * Returns a Locator the content of {@link #photo} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final com.exedio.cope.pattern.MediaPath.Locator getPhotoLocator()
+	{
+		return MediaItem.photo.getLocator(this);
+	}/**
+
+	 **
 	 * Returns whether media {@link #photo} is null.
 	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
 	 *       It can be customized with the tag <tt>@cope.isNull public|package|protected|private|none|non-final</tt> in the comment of the field.
@@ -543,6 +573,16 @@ public class MediaItem extends Item
 	}/**
 
 	 **
+	 * Returns a Locator the content of {@link #foto} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final com.exedio.cope.pattern.MediaPath.Locator getFotoLocator()
+	{
+		return MediaItem.foto.getLocator(this);
+	}/**
+
+	 **
 	 * Returns the content type of the media {@link #foto}.
 	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
 	 *       It can be customized with the tag <tt>@cope.getContentType public|package|protected|private|none|non-final</tt> in the comment of the field.
@@ -560,6 +600,16 @@ public class MediaItem extends Item
 	final java.lang.String getSheetURL()
 	{
 		return MediaItem.sheet.getURL(this);
+	}/**
+
+	 **
+	 * Returns a Locator the content of {@link #sheet} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final com.exedio.cope.pattern.MediaPath.Locator getSheetLocator()
+	{
+		return MediaItem.sheet.getLocator(this);
 	}/**
 
 	 **
