@@ -118,6 +118,16 @@ public class MediaMandatoryItem extends Item
 	}/**
 
 	 **
+	 * Returns a Locator the content of {@link #file} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final com.exedio.cope.pattern.MediaPath.Locator getFileLocator()
+	{
+		return MediaMandatoryItem.file.getLocator(this);
+	}/**
+
+	 **
 	 * Returns the content type of the media {@link #file}.
 	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
 	 *       It can be customized with the tag <tt>@cope.getContentType public|package|protected|private|none|non-final</tt> in the comment of the field.
