@@ -70,6 +70,16 @@ public class ThumbnailItem extends Item
 	}/**
 
 	 **
+	 * Returns a Locator the content of {@link #file} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final com.exedio.cope.pattern.MediaPath.Locator getFileLocator()
+	{
+		return ThumbnailItem.file.getLocator(this);
+	}/**
+
+	 **
 	 * Returns the content type of the media {@link #file}.
 	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
 	 *       It can be customized with the tag <tt>@cope.getContentType public|package|protected|private|none|non-final</tt> in the comment of the field.
@@ -204,6 +214,16 @@ public class ThumbnailItem extends Item
 	final java.lang.String getThumbURL()
 	{
 		return ThumbnailItem.thumb.getURL(this);
+	}/**
+
+	 **
+	 * Returns a Locator the content of {@link #thumb} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	final com.exedio.cope.pattern.MediaPath.Locator getThumbLocator()
+	{
+		return ThumbnailItem.thumb.getLocator(this);
 	}/**
 
 	 **
