@@ -582,6 +582,16 @@ public class AttributeItem extends Item
 	}/**
 
 	 **
+	 * Returns a Locator the content of {@link #someData} is available under.
+	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
+	 *       It can be customized with the tag <tt>@cope.getLocator public|package|protected|private|none|non-final</tt> in the comment of the field.
+	 */
+	public final com.exedio.cope.pattern.MediaPath.Locator getSomeDataLocator()
+	{
+		return AttributeItem.someData.getLocator(this);
+	}/**
+
+	 **
 	 * Returns the content type of the media {@link #someData}.
 	 * @cope.generated This feature has been generated by the cope instrumentor and will be overwritten by the build process.
 	 *       It can be customized with the tag <tt>@cope.getContentType public|package|protected|private|none|non-final</tt> in the comment of the field.
